mock data, tests, specs for souvenirs and printings, etc