@@ -3,11 +3,11 @@ package com.odintsov.wallpapers_project.application.mappers;
 import com.odintsov.wallpapers_project.application.dtos.Printing.PrintingDetailedResponse;
 import com.odintsov.wallpapers_project.application.dtos.Printing.PrintingListResponse;
 import com.odintsov.wallpapers_project.application.mappers.common.DtoMapper;
-import com.odintsov.wallpapers_project.domain.entities.Category;
 import com.odintsov.wallpapers_project.domain.entities.Printing;
 import org.springframework.stereotype.Service;
 
 import java.util.Collections;
+import java.util.stream.Collectors;
 
 
 @Service
@@ -17,6 +17,12 @@ public class PrintingMapper implements DtoMapper<
         PrintingDetailedResponse
         > {
 
+    private final CategoryMapper categoryMapper;
+
+    public PrintingMapper(CategoryMapper categoryMapper) {
+        this.categoryMapper = categoryMapper;
+    }
+
     @Override
     public PrintingListResponse toListResponseDto(Printing entity) {
         return PrintingListResponse.builder()
@@ -24,15 +30,14 @@ public class PrintingMapper implements DtoMapper<
                 .name(entity.getName())
                 .image(entity.getImage())
                 .article(entity.getArticle())
-                .categoryNames(
+                .categories(
                         entity.getCategories() == null
                                 ? Collections.emptyList()
-                                : entity.getCategories().stream()
-                                .map(Category::getName)
-                                .toList()
+                                : entity.getCategories().stream().map(categoryMapper::toResponse).collect(Collectors.toList())
                 )
                 .basePrice(entity.getPrice())
                 .salePrice(entity.getSalePrice())
+                .slug(entity.getSlug())
                 .build();
     }
 
