@@ -3,11 +3,11 @@ package com.odintsov.wallpapers_project.application.mappers;
 import com.odintsov.wallpapers_project.application.dtos.Souvenir.SouvenirDetailedResponse;
 import com.odintsov.wallpapers_project.application.dtos.Souvenir.SouvenirListResponse;
 import com.odintsov.wallpapers_project.application.mappers.common.DtoMapper;
-import com.odintsov.wallpapers_project.domain.entities.Category;
 import com.odintsov.wallpapers_project.domain.entities.Souvenir;
 import org.springframework.stereotype.Service;
 
 import java.util.Collections;
+import java.util.stream.Collectors;
 
 @Service
 public class SouvenirMapper implements DtoMapper<
@@ -16,6 +16,13 @@ public class SouvenirMapper implements DtoMapper<
         SouvenirDetailedResponse
         > {
 
+    private final CategoryMapper categoryMapper;
+
+    public SouvenirMapper(CategoryMapper categoryMapper) {
+        this.categoryMapper = categoryMapper;
+    }
+
+
     @Override
     public SouvenirListResponse toListResponseDto(Souvenir entity) {
         return SouvenirListResponse.builder()
@@ -23,15 +30,14 @@ public class SouvenirMapper implements DtoMapper<
                 .name(entity.getName())
                 .image(entity.getImage())
                 .article(entity.getArticle())
-                .categoryNames(
+                .categories(
                         entity.getCategories() == null
                                 ? Collections.emptyList()
-                                : entity.getCategories().stream()
-                                .map(Category::getName)
-                                .toList()
+                                : entity.getCategories().stream().map(categoryMapper::toResponse).collect(Collectors.toList())
                 )
                 .basePrice(entity.getPrice())
                 .salePrice(entity.getSalePrice())
+                .slug(entity.getSlug())
                 .build();
     }
 
