@@ -3,12 +3,12 @@ package com.odintsov.wallpapers_project.application.mappers;
 import com.odintsov.wallpapers_project.application.dtos.Wallpaper.WallpaperDetailedResponse;
 import com.odintsov.wallpapers_project.application.dtos.Wallpaper.WallpaperListResponse;
 import com.odintsov.wallpapers_project.application.mappers.common.DtoMapper;
-import com.odintsov.wallpapers_project.domain.entities.Category;
 import com.odintsov.wallpapers_project.domain.entities.Wallpaper;
 import com.odintsov.wallpapers_project.domain.entities.WallpaperRoom;
 import org.springframework.stereotype.Service;
 
 import java.util.Collections;
+import java.util.HashSet;
 import java.util.stream.Collectors;
 
 @Service
@@ -18,6 +18,12 @@ public class WallpaperMapper implements DtoMapper<
         WallpaperDetailedResponse
         > {
 
+    private final CategoryMapper categoryMapper;
+
+    public WallpaperMapper(CategoryMapper categoryMapper) {
+        this.categoryMapper = categoryMapper;
+    }
+
     @Override
     public WallpaperListResponse toListResponseDto(Wallpaper entity) {
         return WallpaperListResponse.builder()
@@ -25,12 +31,10 @@ public class WallpaperMapper implements DtoMapper<
                 .name(entity.getName())
                 .image(entity.getImage())
                 .article(entity.getArticle())
-                .categoryNames(
+                .categories(
                         entity.getCategories() == null
                                 ? Collections.emptyList()
-                                : entity.getCategories().stream()
-                                .map(Category::getName)
-                                .toList()
+                                : entity.getCategories().stream().map(categoryMapper::toResponse).collect(Collectors.toList())
                 )
                 .basePrice(entity.getPrice())
                 .salePrice(entity.getSalePrice())
@@ -53,6 +57,7 @@ public class WallpaperMapper implements DtoMapper<
                 .rooms(entity.getRooms().stream()
                         .map(WallpaperRoom::getName)
                         .collect(Collectors.toSet()))
+                .materials(new HashSet<>(entity.getMaterials()))
                 .build();
     }
 
